# BoEmbedder

./: README.md  pyproject.toml
src/BoEmbedder/: gemini.py
tests/data/: texts.txt
